translation, sidebar and controller updates for the disambiguation page

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -442,6 +442,7 @@ disambiguation.addPersonButton                      = Add person
 disambiguation.close                                = Close
 disambiguation.fromPost                             = Author of the publication
 disambiguation.header                               = Disambiguation
+disambiguation.info                                 = The disambiguation is part of the {0} genealogy project and is used to link unassigned publications to an existing person.\nYou see the referenced publication of the author "{1}", a list of already existing persons with the same name, and if available, other publications associated to them. Now you have the option to assign this publication to a person or create a new one.\nIf there are publications, by an author with the same name, which are not yet associated with a person they are shown below.
 disambiguation.link.modal.abortButton               = Abort
 disambiguation.link.modal.msg                       = Your choice of the person associated to the publication can be saved in our system, so that no other have to make this choice again. Do you want to save your choice?
 disambiguation.link.modal.saveButton                = Yes, save
@@ -449,7 +450,7 @@ disambiguation.link.modal.title                     = Help our community with yo
 disambiguation.link.modal.viewButton                = No, show person only.
 disambiguation.linkJustShowPerson                   = Just show person
 disambiguation.linkPersonButton                     = Add person
-disambiguation.listExplanation                      = To differ between persons with the same name, the academic degree and the title of an important publication will be displayed.
+disambiguation.listExplanation                      = To differ between persons with the same name, the academic degree and the title of an important publication will be displayed. You can also use the button next to the name to display some publications already assigned to the person.
 disambiguation.modalLinkPersonCloseButton           = Close
 disambiguation.modalLinkPersonContent               = Do you really want to assoziate the following person name with this publication?
 disambiguation.modalLinkPersonHeader                = Person name assoziation
@@ -471,6 +472,7 @@ disambiguation.otherPerson.modal.tab.linkPerson     = Person with Another Name
 disambiguation.otherPerson.modal.tab.newPerson      = New Person
 disambiguation.otherPerson.modal.title              = Select or create another person
 disambiguation.otherPersonButton                    = Other person
+disambiguation.otherPub                             = Other publications of authors with the same name
 disambiguation.person                               = Person
 disambiguation.personsPanelHeader                   = Persons with the name
 disambiguation.pleaseChooseMsg                      = Please choose a person according to this entry with the name "{0}":
@@ -1472,12 +1474,6 @@ persons.intro.search.desc      = Enter Person Name (Author, Advisor etc.) or Tit
 persons.intro.search.result    = {0} hits for your search
 persons.intro.search.result0   = Sorry, there are no results for your search request.
 persons.intro.search.resultMax = more than {0} hits, please refine your search
-person.sidebar                                    = 
-person.sidebar.linkedUserClaimText                = If you are this person you can claim this page. Please consider that you can only claim one person. 
-person.sidebar.linkedUserClaimedText              = This person has been claimed by a user. 
-person.sidebar.linkedUserDefaultInfoText          = Is that you? Logg in to claim this person. 
-person.sidebar.linkedUserTitle                    = Claim this person
-person.sidebar.linkedUserUnlinkText               = If you accidentally claimed this person you can revert that. Please be careful, this change is permanent.
 persons.intro.wiskidz.desc     = &nbsp;
 persons.intro.wiskidz.img      = /resources/image/logo_person_wiskidz.svg
 persons.intro.wiskidz.text     = {0} Genealogy is a joint project of the \u0009International Centre for Higher Education Research \u0009(INCHER-Kassel) and the Interdisciplinary Research Center for Information System Design (ITeG) at the University of Kassel. It is supported by the German Federal Ministry of Education and Research (BMBF). 
