--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -441,6 +441,7 @@ disambiguation.addPersonButton                      = Person hinzuf\u00FCgen
 disambiguation.close                                = Schlie\u00DFen
 disambiguation.fromPost                             = Autor der Publikation
 disambiguation.header                               = Disambiguierung
+disambiguation.info                                 = Die Disambiguierung ist Teil des {0} Genealogie Projekts und dient dazu Publikationen einer Person zuzuordnen.\nSie sehen die Referenz-Publikation des Autoren "{1}", eine Liste von bereits bestehenden Personen mit dem selben Namen, und falls vorhanden, weitere den Personen zugeordnete Publikationen. Nun besteht die Option diese Publikation einer bereits bestehenden Person zuzuordnen oder eine neue Person anzulegen. Falls weitere Publikationen mit selbigem Autornamen im System vorhanden sind, werden diese weiter unten dargestellt.
 disambiguation.link.modal.abortButton               = Abbrechen
 disambiguation.link.modal.msg                       = Ihre Entscheidung \u00FCber die Person, die mit der Publikation assoziiert werden soll, kann in unserem System gespeichert werden, sodass andere Benutzer diese Entscheidung nicht erneut treffen m\u00FCssen. M\u00F6chten Sie Ihre Entscheidung speichern?
 disambiguation.link.modal.saveButton                = Ja, speichern
@@ -448,7 +449,7 @@ disambiguation.link.modal.title                     = Helfen Sie Ihrer Community
 disambiguation.link.modal.viewButton                = Nein, nur die Person anzeigen.
 disambiguation.linkJustShowPerson                   = Nur die Person anzeigen
 disambiguation.linkPersonButton                     = Person hinzuf\u00FCgen
-disambiguation.listExplanation                      = Um zwischen Personen mit demselben Namen zu unterscheiden, wird der akademische Grad und der Titel einer wichtigen Publikation angezeigt.
+disambiguation.listExplanation                      = Um zwischen Personen mit demselben Namen zu unterscheiden, wird der akademische Grad und der Titel einer wichtigen Publikation angezeigt. Zudem lassen sich \u00FCber den Button neben dem Namen einige der Person bereits zugeordnete Publikationen anzeigen.
 disambiguation.modalLinkPersonCloseButton           = Schlie\u00DFen
 disambiguation.modalLinkPersonContent               = M\u00F6chten Sie wirklich den folgenden Personnamen mit dieser Publikation verkn\u00FCpfen?
 disambiguation.modalLinkPersonHeader                = Personennamen-Verkn\u00FCpfung
@@ -470,6 +471,7 @@ disambiguation.otherPerson.modal.tab.linkPerson     = Person mit anderem Namen
 disambiguation.otherPerson.modal.tab.newPerson      = Neue Person
 disambiguation.otherPerson.modal.title              = Person ausw\u00E4hlen oder neu erstellen
 disambiguation.otherPersonButton                    = Andere Person
+disambiguation.otherPub                             = Weitere Publikationen von Autoren mit dem selben Namen
 disambiguation.person                               = Person
 disambiguation.personsPanelHeader                   = Personen mit dem Namen
 disambiguation.pleaseChooseMsg                      = Bitte w\u00E4hlen Sie eine Person mit dem Namen "{0}" passend zu dem Eintrag:
