--- a/bibsonomy-webapp/src/main/resources/messages_ru.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_ru.properties
@@ -415,6 +415,7 @@ disambiguation.addPersonButton                      = Add person
 disambiguation.close                                = Close
 disambiguation.fromPost                             = From post
 disambiguation.header                               = Disambiguation
+disambiguation.info                                 = 
 disambiguation.link.modal.abortButton               = Abort
 disambiguation.link.modal.msg                       = Your choice of the person associated to the publication can be saved in our system, so that no other have to make this choice again. Do you want to save your choice?
 disambiguation.link.modal.saveButton                = Yes, save
@@ -444,6 +445,7 @@ disambiguation.otherPerson.modal.tab.linkPerson     = Person with Another Name
 disambiguation.otherPerson.modal.tab.newPerson      = New Person
 disambiguation.otherPerson.modal.title              = Select or create another person
 disambiguation.otherPersonButton                    = Other person
+disambiguation.otherPub                             = \u0414\u0440\u0443\u0433\u0438\u0435 \u043F\u0443\u0431\u043B\u0438\u043A\u0430\u0446\u0438\u0438 \u043B\u0438\u0446 \u0441 \u0442\u0435\u043C \u0436\u0435 \u0438\u043C\u0435\u043D\u0435\u043C
 disambiguation.person                               = Person
 disambiguation.personsPanelHeader                   = Persons with the name
 disambiguation.pleaseChooseMsg                      = Please choose a person according to this entry with the name "{0}":
