person page - added AJAX update main name

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -1415,6 +1415,8 @@ person.show.modalDeleteRoleHeader                 = Remove person role from thes
 person.show.modalEditRoleHeader                   = Edit roles of person
 person.show.modalLinkPersonContent                = You really want to link this person with your user account?
 person.show.modalLinkPersonHeader                 = Link person to user
+person.show.modalSetMainNameContent               = You really want to set the following name to be the main name?
+person.show.modalSetMainNameHeader                = Update the main name of the person
 person.show.modalUnlinkPersonContent              = Do you really want to unlink your user account from this person?
 person.show.modalUnlinkPersonHeader               = Remove link between person and user
 person.show.newThesisButton                       = New thesis
