--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -1402,6 +1402,8 @@ person.show.modalDeleteRoleHeader                 = Personenrolle der Abschlussa
 person.show.modalEditRoleHeader                   = Rollen der Person bearbeiten
 person.show.modalLinkPersonContent                = Wollen Sie Ihren Benutzer-Account mit dieser Person verkn\u00FCpfen?
 person.show.modalLinkPersonHeader                 = Person mit Nutzer verkn\u00FCpfen
+person.show.modalSetMainNameContent               = Wollen sie den gew\u00E4hlten Namen wirklich zum Hauptnamen machen?
+person.show.modalSetMainNameHeader                = Hauptnamen der Person aktualisieren
 person.show.modalUnlinkPersonContent              = Wollen Sie die Verkn\u00FCpfung zwischen Ihrem Benutzeraccount und dieser Person aufl\u00F6sen?
 person.show.modalUnlinkPersonHeader               = Verkn\u00FCpfung zwischen Benutzer und Person aufheben
 person.show.newThesisButton                       = Neue Abschlussarbeit
