added info for https

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -2597,3 +2597,4 @@ wordpress.plugin = WordPress Plugin
 yes = yes
 
 younger = younger
+warnings.https=BibSonomy now supports HTTPS. Switch to  <a href="https://www.bibsonomy.org/{0}">HTTPS</a>.
