--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -2584,3 +2584,4 @@ wordpress.plugin = WordPress Plugin
 yes = ja
 
 younger = j\u00FCngere
+warnings.https=BibSonomy unterst\u00FCtzt jetzt HTTPS. Zu <a href="https://www.bibsonomy.org/{0}">HTTPS</a> wechseln.
