--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/IEEEComputerSocietyScraperUnitURLTest1.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/IEEEComputerSocietyScraperUnitURLTest1.bib
@@ -1,13 +1,13 @@
 @article{10.1109/DEXA.2006.148,
-author = {Keith Rennolls},
+author = {Keith Rennolls, },
 title = {Visualization and Bayesian Nets to link Business Aims},
-journal ={2012 23rd International Workshop on Database and Expert Systems Applications},
-volume = {0},
+journal = {2012 23rd International Workshop on Database and Expert Systems Applications},
+volume = {00},
+number = {undefined},
 issn = {1529-4188},
 year = {2006},
 pages = {603-607},
-doi = {http://doi.ieeecomputersociety.org/10.1109/DEXA.2006.148},
+doi = {doi.ieeecomputersociety.org/10.1109/DEXA.2006.148},
 publisher = {IEEE Computer Society},
-address = {Los Alamitos, CA, USA}
-,abstract = {If the full CRISP DM life-cycle is to be implemented then there needs to be a means by which business logic, understanding and aims can be directly related to the DM and KDD modelling process, and then onto deployment. Several graphical ways of representing data and models are considered: the E-R diagram, linked data and model ontologies, and graphicalmodel/ Bayesian-net dependency diagrams. It is suggested that the provision of graphical tools for the domain expert to express their prior knowledge, understanding and aims is the best way of linking these to the DM &amp; KDD process and subsequent deployment of discovered knowledge.}
+address = {Los Alamitos, CA, USA},
 }
