updated JStorScraper test files

--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/JStorScraperUnitURLTest.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/JStorScraperUnitURLTest.bib
@@ -2,7 +2,7 @@
  ISSN = {09628452},
  URL = {http://www.jstor.org/stable/4142852},
  abstract = {It is widely known that the spread of the human immunodeficiency virus was slower than exponential in several populations, even at the very beginning of the epidemic. We show that this implies a significant reduction in the effective reproductive rate of the epidemic, and describe a general mechanism, related to the clustering properties of the disease transmission network, that is capable of explaining this reduction. Our considerations provide what is, to our knowledge, a new angle on polynomial epidemic processes, and may have implications for the choice of strategy against such epidemics.},
- author = {Balázs Szendrői, Gábor Csányi},
+ author = {Balázs Szendrői and Gábor Csányi},
  journal = {Proceedings: Biological Sciences},
  pages = {S364-S366},
  publisher = {The Royal Society},
@@ -10,4 +10,3 @@
  volume = {271},
  year = {2004}
 }
-
