--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/JStorScraperUnitURLTest1.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/JStorScraperUnitURLTest1.bib
@@ -2,7 +2,7 @@
  ISBN = {9780691117621},
  URL = {http://www.jstor.org/stable/j.ctt7zv8mk},
  abstract = {<p>Genomic signal processing (GSP) can be defined as the analysis, processing, and use of genomic signals to gain biological knowledge, and the translation of that knowledge into systems-based applications that can be used to diagnose and treat genetic diseases. Situated at the crossroads of engineering, biology, mathematics, statistics, and computer science, GSP requires the development of both nonlinear dynamical models that adequately represent genomic regulation, and diagnostic and therapeutic tools based on these models. This book facilitates these developments by providing rigorous mathematical definitions and propositions for the main elements of GSP and by paying attention to the validity of models relative to the data. Ilya Shmulevich and Edward Dougherty cover real-world situations and explain their mathematical modeling in relation to systems biology and systems medicine.</p><p><em>Genomic Signal Processing</em>makes a major contribution to computational biology, systems biology, and translational genomics by providing a self-contained explanation of the fundamental mathematical issues facing researchers in four areas: classification, clustering, network modeling, and network intervention.</p>},
- author = {Ilya Shmulevich, Edward R. Dougherty},
+ author = {Ilya Shmulevich and Edward R. Dougherty},
  publisher = {Princeton University Press},
  title = {Genomic Signal Processing},
  year = {2007}
