updated ElsevierScraper test files

--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/ElsevierScraper1UnitURLTest.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/ElsevierScraper1UnitURLTest.bib
@@ -1,11 +1,13 @@
 @article{wu2016identification,
-abstract = {Background In this study, we aimed to discover potential gene targets for treating childhood asthmatics. Methods With the microarray data downloaded from Gene Expression Omnibus (GEO) database, we explored the common differentially expressed genes (DEGs) in children with severe asthma and mild asthma (SA vs. MA) or healthy controls (SA vs. HC). Then we performed hierarchical clustering, function and pathway enrichment analysis for the common DEGs. Results A total of 81 genes were identified to be differentially expressed in SA vs. MA and SA vs. HC group. Hierarchical clustering of the 81 DEGs could crudely separate the SA, MA and healthy individuals. The overrepresented GO terms of the common DEGs were related with lipid biosynthetic process (21.74%), pigment biosynthetic process (13.04%) and nucleoside monophosphate metabolic process (13.04%). Only one pathway was significantly enriched, which was the antigen processing and presentation pathway involved with CD4 and RFX gene. Conclusions The antigen processing and presentation pathway and lipid biosynthetic process may play roles in the pathogenesis of severe asthma. CD4 and RFX provide a therapeutic possibility for childhood asthma.},
+abstract = {BackgroundIn this study, we aimed to discover potential gene targets for treating childhood asthmatics. MethodsWith the microarray data downloaded from Gene Expression Omnibus (GEO) database, we explored the common differentially expressed genes (DEGs) in children with severe asthma and mild asthma (SA vs. MA) or healthy controls (SA vs. HC). Then we performed hierarchical clustering, function and pathway enrichment analysis for the common DEGs. ResultsA total of 81 genes were identified to be differentially expressed in SA vs. MA and SA vs. HC group. Hierarchical clustering of the 81 DEGs could crudely separate the SA, MA and healthy individuals. The overrepresented GO terms of the common DEGs were related with lipid biosynthetic process (21.74%), pigment biosynthetic process (13.04%) and nucleoside monophosphate metabolic process (13.04%). Only one pathway was significantly enriched, which was the antigen processing and presentation pathway involved with CD4 and RFX gene. ConclusionsThe antigen processing and presentation pathway and lipid biosynthetic process may play roles in the pathogenesis of severe asthma. CD4 and RFX provide a therapeutic possibility for childhood asthma.},
 author = {Wu,Y and Zhang,J.-F and Xu,T and Xu,L and Qiao,J and Liu,F and Shan,H and Jiang,X},
+doi = {10.1016/j.aller.2015.03.002},
+issn = {03010546},
 journal = {Allergologia et Immunopathologia},
-number = {01},
+keywords = {Childhood asthma Differentially expressed genes Hierarchical clustering Function and pathway enrichment ER},
+number = {1},
 pages = {76--82},
 title = {Identification of therapeutic targets for childhood severe asthmatics with DNA microarray},
-url = {ER},
 volume = {44},
 year = {2016}
 }
