--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/GoogleBooksScraperUnitURLTest2.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/GoogleBooksScraperUnitURLTest2.bib
@@ -1,6 +1,6 @@
 @book{neubauer1992deutscher,
   title={Deutscher Dokumentartag 1991: Information und Dokumentation in den 90er Jahren : neue Herausforderung, neue Technologien : Universit{\"a}t Ulm, 30. September bis 2. Oktober 1991},
-  author={Neubauer, W.},
+  author={Neubauer, W. and Deutsche Gesellschaft f{\"u}r Dokumentation},
   isbn={9783925474132},
   lccn={93178194},
   series={DGD-Schrift},
