updated ElsevierhealthScraper test files

--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/ElsevierhealthScraperUnitURLTest1.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/ElsevierhealthScraperUnitURLTest1.bib
@@ -5,7 +5,7 @@ author = {Garg, Arun K.},
 isbn = {0323087655 9780323087650},
 publisher = {Mosby/Elsevier},
 refid = {693578000},
-title = {Implant dentistry a practical approach},
+title = {Implant dentistry : a practical approach},
 url = {http://www.clinicalkey.com/dura/browse/bookChapter/3-s2.0-C20090382355},
 year = {2010}
 }
