updated person page - added posts of similar authors - added needed messages - adjusted CSS

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -1425,6 +1425,7 @@ person.show.noResourcesFound                      = No resources found
 person.show.orcidId                               = OrcidID
 person.show.other                                 = Other
 person.show.otherPub                              = Other Publications
+person.show.otherPubOfSimilarAuthor               = Other Publications of same named Authors
 person.show.otherReviewer                         = Other reviewer
 person.show.ownPubTab                             = Own Thesis
 person.show.person                                = Person
