--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -1412,6 +1412,7 @@ person.show.noResourcesFound                      = Keine Resourcen gefunden
 person.show.orcidId                               = OrcidID
 person.show.other                                 = Sonstige
 person.show.otherPub                              = Andere Publikationen
+person.show.otherPubOfSimilarAuthor               = Andere Publikationen gleichnamiger Autoren
 person.show.otherReviewer                         = Andere Gutachter
 person.show.ownPubTab                             = Eigene Abschlussarbeiten
 person.show.person                                = Person
