--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/IEEEComputerSocietyScraperUnitURLTest3.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/IEEEComputerSocietyScraperUnitURLTest3.bib
@@ -1,5 +1,5 @@
 @article{10.1109/2.901164,
-author = {Steve Lawrence,  and Frans M. Coetzee,  and C. Lee Giles,  and Eric Glover,  and Gary William Flake,  and Finn Årup Nielsen,  and Robert Krovetz,  and David M. Pennock,  and Andries Kruger, },
+author = {Steve Lawrence,  and Frans M. Coetzee,  and C. Lee Giles,  and Eric Glover,  and Gary William Flake,  and Finn Årup Nielsen,  and Robert Krovetz,  and David M. Pennock,  and Andries Kruger},
 title = {Persistence of Web References in Scientific Research},
 journal = {Computer},
 volume = {34},
