--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/IEEEComputerSocietyScraperUnitURLTest2.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/IEEEComputerSocietyScraperUnitURLTest2.bib
@@ -1,5 +1,5 @@
 @article{10.1109/DEXA.2006.148,
-author = {Keith Rennolls, },
+author = {Keith Rennolls},
 title = {Visualization and Bayesian Nets to link Business Aims},
 journal = {2012 23rd International Workshop on Database and Expert Systems Applications},
 volume = {00},
