updated PlosScraper test data

--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/PlosScraperUnitURLTest1.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/PlosScraperUnitURLTest1.bib
@@ -1,7 +1,6 @@
-
 @article{10.1371/journal.pbio.0060010,
     author = {Stewart, James Bruce AND Freyer, Christoph AND Elson, Joanna L AND Wredenberg, Anna AND Cansu, Zekiye AND Trifunovic, Aleksandra AND Larsson, Nils-Göran},
-    journal = {PLoS Biol},
+    journal = {PLOS Biology},
     publisher = {Public Library of Science},
     title = {Strong Purifying Selection in Transmission of Mammalian Mitochondrial DNA},
     year = {2008},
@@ -9,13 +8,7 @@
     volume = {6},
     url = {http://dx.doi.org/10.1371%2Fjournal.pbio.0060010},
     pages = {1-9},
-    abstract = {
-        <p>We have used a genetic mouse model with a proofreading-deficient mitochondrial polymerase to mutagenize the mouse mitochondrial genome. The inherited mutations are subject to rapid purifying selection against amino acid substitutions.</p>
-      },
+    abstract = {We have used a genetic mouse model with a proofreading-deficient mitochondrial polymerase to mutagenize the mouse mitochondrial genome. The inherited mutations are subject to rapid purifying selection against amino acid substitutions.},
     number = {1},
     doi = {10.1371/journal.pbio.0060010}
-}        
-
-
-
-
+}
