--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/PlosScraperUnitURLTest11.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/PlosScraperUnitURLTest11.bib
@@ -1,6 +1,6 @@
 @article{10.1371/journal.pone.0089052,
     author = {Szell, Michael AND Grauwin, Sébastian AND Ratti, Carlo},
-    journal = {PLoS ONE},
+    journal = {PLOS ONE},
     publisher = {Public Library of Science},
     title = {Contraction of Online Response to Major Events},
     year = {2014},
@@ -8,7 +8,7 @@
     volume = {9},
     url = {http://dx.doi.org/10.1371%2Fjournal.pone.0089052},
     pages = {1-9},
-    abstract = {<p>Quantifying regularities in behavioral dynamics is of crucial interest for understanding collective social events such as panics or political revolutions. With the widespread use of digital communication media it has become possible to study massive data streams of user-created content in which individuals express their sentiments, often towards a specific topic. Here we investigate messages from various online media created in response to major, collectively followed events such as sport tournaments, presidential elections, or a large snow storm. We relate content length and message rate, and find a systematic correlation during events which can be described by a power law relation—the higher the excitation, the shorter the messages. We show that on the one hand this effect can be observed in the behavior of most regular users, and on the other hand is accentuated by the engagement of additional user demographics who only post during phases of high collective activity. Further, we identify the distributions of content lengths as lognormals in line with statistical linguistics, and suggest a phenomenological law for the systematic dependence of the message rate to the lognormal mean parameter. Our measurements have practical implications for the design of micro-blogging and messaging services. In the case of the existing service Twitter, we show that the imposed limit of 140 characters per message currently leads to a substantial fraction of possibly dissatisfying to compose tweets that need to be truncated by their users.</p>},
+    abstract = {Quantifying regularities in behavioral dynamics is of crucial interest for understanding collective social events such as panics or political revolutions. With the widespread use of digital communication media it has become possible to study massive data streams of user-created content in which individuals express their sentiments, often towards a specific topic. Here we investigate messages from various online media created in response to major, collectively followed events such as sport tournaments, presidential elections, or a large snow storm. We relate content length and message rate, and find a systematic correlation during events which can be described by a power law relation—the higher the excitation, the shorter the messages. We show that on the one hand this effect can be observed in the behavior of most regular users, and on the other hand is accentuated by the engagement of additional user demographics who only post during phases of high collective activity. Further, we identify the distributions of content lengths as lognormals in line with statistical linguistics, and suggest a phenomenological law for the systematic dependence of the message rate to the lognormal mean parameter. Our measurements have practical implications for the design of micro-blogging and messaging services. In the case of the existing service Twitter, we show that the imposed limit of 140 characters per message currently leads to a substantial fraction of possibly dissatisfying to compose tweets that need to be truncated by their users.},
     number = {2},
     doi = {10.1371/journal.pone.0089052}
 }
