--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/PlosScraperUnitURLTest2.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/PlosScraperUnitURLTest2.bib
@@ -1,7 +1,6 @@
-
 @article{10.1371/journal.pmed.1000248,
     author = {Danaei, Goodarz AND Rimm, Eric B. AND Oza, Shefali AND Kulkarni, Sandeep C. AND Murray, Christopher J. L. AND Ezzati, Majid},
-    journal = {PLoS Med},
+    journal = {PLOS Medicine},
     publisher = {Public Library of Science},
     title = {The Promise of Prevention: The Effects of Four Preventable Risk Factors on National Life Expectancy and Life Expectancy Disparities by Race and County in the United States},
     year = {2010},
@@ -9,13 +8,7 @@
     volume = {7},
     url = {http://dx.doi.org/10.1371%2Fjournal.pmed.1000248},
     pages = {1-13},
-    abstract = {
-<p>Majid Ezzati and colleagues examine the contribution of a set of risk factors (smoking, high blood pressure, elevated blood glucose, and adiposity) to socioeconomic disparities in life expectancy in the US population.</p>
-},
+    abstract = {Majid Ezzati and colleagues examine the contribution of a set of risk factors (smoking, high blood pressure, elevated blood glucose, and adiposity) to socioeconomic disparities in life expectancy in the US population.},
     number = {3},
     doi = {10.1371/journal.pmed.1000248}
-}        
-
-
-
-
+}
