updated AmazonScraper test files

--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/AmazonScraperUnitURLTest6.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/AmazonScraperUnitURLTest6.bib
@@ -1,10 +1,10 @@
-@electronic{troelsen2007platform,
-address = {Berkeley, [Calif.]},
-author = {Troelsen, Andrew W.},
-publisher = {Apress},
-refid = {873857491},
-title = {Pro C 2008 and the .NET 3.5 platform Includes index},
+@book{troelsen2007platform,
+address = {New York},
+author = {Troelsen, Andrew},
+isbn = {9781590598849 1590598849},
+publisher = {APress},
+refid = {968258246},
+title = {Pro C# 2008 and the .NET 3.5 platform exploring the .NET universe using curly brackets},
 url = {http://www.amazon.co.uk/Pro-2008-NET-Platform-Fourth/dp/1590598849/ref=sr_1_1?ie=UTF8&s=books&qid=1201616235&sr=1-1},
 year = {2007}
-,isbn = {1590598849}
 }
