--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/AmazonScraperUnitURLTest1.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/AmazonScraperUnitURLTest1.bib
@@ -1,10 +1,10 @@
-@electronic{antoniou2004semantic,
-address = {Cambridge, Mass.},
-author = {Antoniou, G. and Van Harmelen, Frank},
-isbn = {9780262267205 0262267209 1417560770 9781417560776},
+@book{antoniou2004semantic,
+address = {Cambridge (Ma) ; London},
+author = {Antoniou, Grigoris and Harmelen, Frank van},
+isbn = {0262012103 9780262012102},
 publisher = {MIT Press},
-refid = {57141643},
-title = {A semantic Web primer},
-url = {http://www.amazon.com/Semantic-Primer-Cooperative-Information-Systems/dp/0262012103/ref=pd_bbs_sr_1?ie=UTF8&s=books&qid=1200485020&sr=1-1},
+refid = {968263234},
+title = {A semantic web primer},
+url = {http://www.amazon.com/Semantic-Primer-Cooperative-Information-Systems/dp/0262012103/ref=pd_bbs_sr_1?ie=UTF8&amp;s=books&amp;qid=1200485020&amp;sr=1-1},
 year = {2004}
 }
