--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -1730,6 +1730,7 @@ post.resource.key.help                                  = Used by BibTeX for sor
 post.resource.misc                                      = misc fields
 post.resource.misc.addbutton                            = add new field
 post.resource.misc.checkbox                             = expert view
+post.resource.misc.doi                                  = DOI
 post.resource.misc.help                                 = this field can be used to import non-standard fields in addition to the predefined ones. Please use BibTeX compliant syntax, e.g. <tt>fieldName = {fieldValue},</tt>
 post.resource.misc.tooltipAdd                           = adds a new line
 post.resource.misc.tooltipRemove                        = remove this line
