--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -1716,6 +1716,7 @@ post.resource.key.help                                  = Bei fehlenden Autor- o
 post.resource.misc                                      = weitere Felder
 post.resource.misc.addbutton                            = neues Feld hinzuf\u00FCgen
 post.resource.misc.checkbox                             = Expertenmodus
+post.resource.misc.doi                                  = DOI
 post.resource.misc.help                                 = In dieses Feld k\u00F6nnen Sie zus\u00E4tzliche Felder in BibTeX-vertr\u00E4glicher Schreibweise eintragen, beispielsweise <tt>Feldname = {Feldwert},</tt>
 post.resource.misc.tooltipAdd                           = F\u00FCgt eine neue Zeile hinzu
 post.resource.misc.tooltipRemove                        = Diese Zeile l\u00F6schen
