Disambiguation Page   translations, design, controller updates new simplePub tag file to visualize publications (title, author)

--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -440,8 +440,8 @@ didyouknow.scanningQr      = <p>Ihre Webcam kann die Barcodes Ihrer B\u00FCcher 
 disambiguation.addPersonButton                      = Person hinzuf\u00FCgen
 disambiguation.close                                = Schlie\u00DFen
 disambiguation.fromPost                             = Autor der Publikation
-disambiguation.header                               = Disambiguierung
-disambiguation.info                                 = Die Disambiguierung ist Teil des {0} Genealogie Projekts und dient dazu Publikationen einer Person zuzuordnen.\nSie sehen die Referenz-Publikation des Autoren "{1}", eine Liste von bereits bestehenden Personen mit dem selben Namen, und falls vorhanden, weitere den Personen zugeordnete Publikationen. Nun besteht die Option diese Publikation einer bereits bestehenden Person zuzuordnen oder eine neue Person anzulegen. Falls weitere Publikationen mit selbigem Autornamen im System vorhanden sind, werden diese weiter unten dargestellt.
+disambiguation.header                               = Disambiguierung von "{0}"
+disambiguation.info                                 = Die Disambiguierung ist Teil des {0} Genealogie Projekts und dient dazu Publikationen einer Person zuzuordnen. Sie sehen die Referenz-Publikation des Autoren "{1}", eine Liste von bereits bestehenden Personen mit dem selben Namen, und falls vorhanden, weitere den Personen bereits zugeordnete Publikationen. Nun besteht die Option diese Publikation einer bereits bestehenden Person zuzuordnen oder eine neue Person anzulegen.
 disambiguation.link.modal.abortButton               = Abbrechen
 disambiguation.link.modal.msg                       = Ihre Entscheidung \u00FCber die Person, die mit der Publikation assoziiert werden soll, kann in unserem System gespeichert werden, sodass andere Benutzer diese Entscheidung nicht erneut treffen m\u00FCssen. M\u00F6chten Sie Ihre Entscheidung speichern?
 disambiguation.link.modal.saveButton                = Ja, speichern
@@ -474,9 +474,10 @@ disambiguation.otherPersonButton                    = Andere Person
 disambiguation.otherPub                             = Weitere Publikationen von Autoren mit dem selben Namen
 disambiguation.person                               = Person
 disambiguation.personsPanelHeader                   = Personen mit dem Namen
-disambiguation.pleaseChooseMsg                      = Bitte w\u00E4hlen Sie eine Person mit dem Namen "{0}" passend zu dem Eintrag:
+disambiguation.pleaseChooseMsg                      = Bitte w\u00E4hlen Sie eine Person um die Publikation zuzuordnen
 disambiguation.postPanelHeader                      = Verwandter Eintrag
 disambiguation.searchPersonButton                   = Einen anderen Namen suchen
+disambiguation.title                                = Disambiguierung
 
 discussion.bookmark.reviewCommentInfo    = Sie k\u00F6nnen diese Webseite entweder kommentieren oder bewerten.
 discussion.bookmarkReferences            = Bookmarks
