--- a/bibsonomy-webapp/src/main/resources/messages_ru.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_ru.properties
@@ -448,9 +448,10 @@ disambiguation.otherPersonButton                    = Other person
 disambiguation.otherPub                             = \u0414\u0440\u0443\u0433\u0438\u0435 \u043F\u0443\u0431\u043B\u0438\u043A\u0430\u0446\u0438\u0438 \u043B\u0438\u0446 \u0441 \u0442\u0435\u043C \u0436\u0435 \u0438\u043C\u0435\u043D\u0435\u043C
 disambiguation.person                               = Person
 disambiguation.personsPanelHeader                   = Persons with the name
-disambiguation.pleaseChooseMsg                      = Please choose a person according to this entry with the name "{0}":
+disambiguation.pleaseChooseMsg                      = Please choose a person to relate this publication to
 disambiguation.postPanelHeader                      = Related Post
 disambiguation.searchPersonButton                   = Search other name
+disambiguation.title                                = Disambiguation
 
 discussion.bookmarkReferences = \u0417\u0430\u043A\u043B\u0430\u0434\u043A\u0438
 discussion.byGroup            = \u043F\u043E\u043A\u0430\u0437\u0430\u0442\u044C \u043E\u0431\u0441\u0443\u0436\u0434\u0430\u0435\u043C\u044B\u0435 \u0437\u0430\u043F\u0438\u0441\u0438 {0}
