--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -441,8 +441,8 @@ didyouknow.scanningQr      = <p>Your webcam can scan the barcodes on your books!
 disambiguation.addPersonButton                      = Add person
 disambiguation.close                                = Close
 disambiguation.fromPost                             = Author of the publication
-disambiguation.header                               = Disambiguation
-disambiguation.info                                 = The disambiguation is part of the {0} genealogy project and is used to link unassigned publications to an existing person.\nYou see the referenced publication of the author "{1}", a list of already existing persons with the same name, and if available, other publications associated to them. Now you have the option to assign this publication to a person or create a new one.\nIf there are publications, by an author with the same name, which are not yet associated with a person they are shown below.
+disambiguation.header                               = Disambiguation of "{0}"
+disambiguation.info                                 = The disambiguation is part of the {0} genealogy project and is used to link unassigned publications to an existing person. You see the referenced publication of the author "{1}", a list of already existing persons with the same author-name, and if available, other publications associated to them. Now you have the option to assign this publication to a person or create a new one.
 disambiguation.link.modal.abortButton               = Abort
 disambiguation.link.modal.msg                       = Your choice of the person associated to the publication can be saved in our system, so that no other have to make this choice again. Do you want to save your choice?
 disambiguation.link.modal.saveButton                = Yes, save
@@ -475,9 +475,10 @@ disambiguation.otherPersonButton                    = Other person
 disambiguation.otherPub                             = Other publications of authors with the same name
 disambiguation.person                               = Person
 disambiguation.personsPanelHeader                   = Persons with the name
-disambiguation.pleaseChooseMsg                      = Please choose a person according to this entry with the name "{0}":
+disambiguation.pleaseChooseMsg                      = Please choose a person to relate this publication to
 disambiguation.postPanelHeader                      = Related Post
 disambiguation.searchPersonButton                   = Search other name
+disambiguation.title                                = Disambiguation
 
 discussion.bookmark.reviewCommentInfo    = You can either comment or review this website.
 discussion.bookmarkReferences            = Bookmarks
