--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/sciencedirect/ScienceDirectScraperUnitURLTest7.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/sciencedirect/ScienceDirectScraperUnitURLTest7.bib
@@ -1,5 +1,5 @@
 @article{DELARA2007139,
-title = "Fundamental Aspects of Software Engineering Attributed graph transformation with node type inheritance",
+title = "Attributed graph transformation with node type inheritance",
 journal = "Theoretical Computer Science",
 volume = "376",
 number = "3",
@@ -9,7 +9,7 @@ note = "",
 issn = "0304-3975",
 doi = "http://dx.doi.org/10.1016/j.tcs.2007.02.001",
 url = "http://www.sciencedirect.com/science/article/pii/S0304397507000631",
-author = "M. Cerioli and T. Margaria and M. Wermelinger and Juan de Lara and Roswitha Bardohl and Hartmut Ehrig and Karsten Ehrig and Ulrike Prange and Gabriele Taentzer",
+author = "Juan de Lara and Roswitha Bardohl and Hartmut Ehrig and Karsten Ehrig and Ulrike Prange and Gabriele Taentzer",
 keywords = "Graph transformation",
 keywords = "Meta-modelling",
 keywords = "Double pushout approach",
