--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/AmazonScraperUnitURLTest6.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/AmazonScraperUnitURLTest6.bib
@@ -1,10 +1,11 @@
-@book{troelsen2007platform,
-address = {New York},
-author = {Troelsen, Andrew},
-isbn = {9781590598849 1590598849},
-publisher = {APress},
-refid = {968258246},
-title = {Pro C# 2008 and the .NET 3.5 platform exploring the .NET universe using curly brackets},
+@electronic{troelsen2007platform,
+abstract = {Whether the reader is moving to .NET for the first time or already writing applications on .NET 2.0 or .NET 3.0, or Pro C 2008 and the .NET 3.5, this resource provides a solid grounding in this new technology and serves as a comprehensive coding reference.},
+address = {Berkeley, CA; New York},
+author = {Troelsen, Andrew W.},
+isbn = {9781430204220 1430204222 1281220248 9781281220240},
+publisher = {Apress ; Distributed to the Book trade worldwide by Springer-Verlag New York},
+refid = {233972918},
+title = {Pro C 2008 and the .NET 3.5 platform},
 url = {http://www.amazon.co.uk/Pro-2008-NET-Platform-Fourth/dp/1590598849/ref=sr_1_1?ie=UTF8&s=books&qid=1201616235&sr=1-1},
 year = {2007}
 }
