updated IEEEXploreBookScraper test file

--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/IEEEXploreBookScraperUnitURLTest.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/IEEEXploreBookScraperUnitURLTest.bib
@@ -1,9 +1,9 @@
 @electronic{kolen2001field,
 address = {New York},
 author = {Kolen, John F. and Kremer, Stefan C.},
-isbn = {9780470544037 0470544031 9780790853697 0790853698},
+isbn = {9780470544037 0470544031},
 publisher = {IEEE Press},
-refid = {557451231},
+refid = {798878678},
 title = {A field guide to dynamical recurrent networks},
 url = {http://ieeexplore.ieee.org/xpl/bkabstractplus.jsp?bkn=5263132},
 year = {2001}
