updated IEEEComputerSocietyScraper test files

--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/IEEEComputerSocietyScraperUnitURLTest3.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/IEEEComputerSocietyScraperUnitURLTest3.bib
@@ -3,7 +3,7 @@ author = {Steve Lawrence,  and Frans M. Coetzee,  and C. Lee Giles,  and Eric Gl
 title = {Persistence of Web References in Scientific Research},
 journal = {Computer},
 volume = {34},
-number = {undefined},
+number = {},
 issn = {0018-9162},
 year = {2001},
 pages = {26-31},
