--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/IEEEComputerSocietyScraperUnitURLTest2.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/IEEEComputerSocietyScraperUnitURLTest2.bib
@@ -3,7 +3,7 @@ author = {Keith Rennolls},
 title = {Visualization and Bayesian Nets to link Business Aims},
 journal = {2012 23rd International Workshop on Database and Expert Systems Applications},
 volume = {00},
-number = {undefined},
+number = {},
 issn = {1529-4188},
 year = {2006},
 pages = {603-607},
