--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/SpringerLinkScraperUnitURLTest9.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/SpringerLinkScraperUnitURLTest9.bib
@@ -1,11 +1,10 @@
-@electronic{ricci2011recommender,
-abstract = {The explosive growth of e-commerce and online environments has made the issue of information search and selection increasingly serious; users are overloaded by options to consider and they may not have the time or knowledge to personally evaluate these options. Recommender systems have proven to be a valuable way for online users to cope with the information overload and have become one of the most powerful and popular tools in electronic commerce. Correspondingly, various techniques for recommendation generation have been proposed. During the last decade, many of them have also been successfully deployed in commercial environments. Recommender Systems Handbook, an edited volume, is a multi-disciplinary effort that involves world-wide experts from diverse fields, such as artificial intelligence, human computer interaction, information technology, data mining, statistics, adaptive user interfaces, decision support systems, marketing, and consumer behavior. Theoreticians and practitioners from these fields continually seek techniques for more efficient, cost-effective and accurate recommender systems. This handbook aims to impose a degree of order on this diversity, by presenting a coherent and unified repository of recommender systems' major concepts, theories, methodologies, trends, challenges and applications. Extensive artificial applications, a variety of real-world applications, and detailed case studies are included. Recommender Systems Handbook illustrates how this technology can support the user in decision-making, planning and purchasing processes. It works for well known corporations such as Amazon, Google, Microsoft and AT&T. This handbook is suitable for researchers and advanced-level students in computer science as a reference.},
-address = {New York; London},
-author = {Ricci, Francesco},
+@book{ricci2011recommender,
+address = {New York [etc.]},
+author = {Ricci, Francesco and Springer Science+Business Media},
 isbn = {9780387858197 0387858199 9780387858203 0387858202},
 publisher = {Springer},
-refid = {682910825},
-title = {Recommender systems handbook},
-url = {http://public.eblib.com/choice/publicfullrecord.aspx?p=645370},
+refid = {883539056},
+title = {Recommender Systems handbook},
 year = {2011}
+,url = {http://www.worldcat.org/search?qt=worldcat_org_all&q=9780387858203}
 }
