--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/AmazonScraperUnitURLTest5.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/AmazonScraperUnitURLTest5.bib
@@ -1,11 +1,10 @@
-@book{segaran2007programming,
-abstract = {Provides information on building Web 2.0 applications that have the capability to mine data created by Internet applications.},
-address = {Beijing; Sebastapol [CA]},
+@book{segaran2008,
+address = {Nanjing},
 author = {Segaran, Toby},
-isbn = {9780596529321 0596529325},
-publisher = {O'Reilly},
-refid = {166886837},
-title = {Programming collective intelligence : building smart web 2.0 applications},
+isbn = {9787564111397 7564111399},
+publisher = {Southeast University Press},
+refid = {661004846},
+title = {<>},
 url = {http://www.amazon.co.jp/Programming-Collective-Intelligence-Building-Applications/dp/0596529325/ref=sr_1_1/249-7857785-0612358?ie=UTF8&s=gateway&qid=1201616160&sr=8-1},
-year = {2007}
+year = {2008}
 }
