updated NatureScraper and test files

--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/NatureScraperUnitURLTest2.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/NatureScraperUnitURLTest2.bib
@@ -1,13 +1,3 @@
-@article{kumamaru2012direct,
-author = {Kumamaru, Hiromi and Ohkawa, Yasuyuki and Saiwai, Hirokazu and Yamada, Hisakata and Kubota, Kensuke and Kobayakawa, Kazu and Akashi, Koichi and Okano, Hideyuki and Iwamoto, Yukihide and Okada, Seiji},
-comment = {10.1038/ncomms2132},
-journal = {Nat Commun},
-month = {oct},
-pages = {1140--},
-publisher = {Nature Publishing Group, a division of Macmillan Publishers Limited. All Rights Reserved.},
-title = {Direct isolation and RNA-seq reveal environment-dependent properties of engrafted neural stem/progenitor cells},
-url = {http://dx.doi.org/10.1038/ncomms2132},
-volume = {3},
-year = {2012}
-,abstract = {Neural stem/progenitor cell (NSPC) transplantation is a promising treatment for various neurodegenerative disorders including spinal cord injury, however, no direct analysis has ever been performed on their <i>in vivo</i> profile after transplantation. Here we combined bioimaging, flow-cytometric isolation and ultra-high-throughput RNA sequencing to evaluate the cellular properties of engrafted NSPCs. The acutely transplanted NSPCs had beneficial effects on spinal cord injury, particularly neuroprotection and neurohumoral secretion, whereas their <i>in situ</i> secretory activity differed significantly from that predicted <i>in vitro</i>. The RNA-sequencing of engrafted NSPCs revealed dynamic expression/splicing changes in various genes involved in cellular functions and tumour development depending on graft environments. Notably, in the pathological environment, overall transcriptional activity, external signal transduction and neural differentiation of engrafted NSPCs were significantly suppressed. These results highlight the vulnerability of engrafted NSPCs to environmental force, while emphasizing the importance of <i>in situ</i> analysis in advancing the efficacy and safety of stem cell-based therapies.}
+@article{nokey,
+url = {http://www.nature.com/ncomms/journal/v3/n10/full/ncomms2132.html},
 }
