--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -1530,7 +1530,7 @@ post.meta.filter                                        = filter
 post.meta.filter.title                                  = filter displayed posts
 post.meta.flag_as_spam                                  = spam
 post.meta.flag_as_spam.title                            = Mark this post as spam
-post.meta.helplink                                      = /help_en/Sorting%20Publications
+post.meta.helplink                                      = /help_en/SortingPublications
 post.meta.kill_spammer                                  = KillSpammer!
 post.meta.others                                        = others
 post.meta.own_post                                      = You already own this post.
