updated MDPIScraper and test files

--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/MDPIScraperUnitURLTest.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/MDPIScraperUnitURLTest.bib
@@ -1,4 +1,3 @@
-
 @Article{rs5105122,
 AUTHOR = {Kuenzer, Claudia and Guo, Huadong and Schlegel, Inga and Tuan, Vo Quoc and Li, Xinwu and Dech, Stefan},
 TITLE = {Varying Scale and Capability of Envisat ASAR-WSM, TerraSAR-X Scansar and TerraSAR-X Stripmap Data to Assess Urban Flood Situations: A Case Study of the Mekong Delta in Can Tho Province},
@@ -6,7 +5,7 @@ JOURNAL = {Remote Sensing},
 VOLUME = {5},
 YEAR = {2013},
 NUMBER = {10},
-PAGES = {5122},
+PAGES = {5122--5142},
 URL = {http://www.mdpi.com/2072-4292/5/10/5122},
 ISSN = {2072-4292},
 DOI = {10.3390/rs5105122}
