updated ACMBasicScraperTest and test files

--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/ACMBasicScraperUnitURLTest3.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/ACMBasicScraperUnitURLTest3.bib
@@ -8,12 +8,13 @@
  month = nov,
  year = {2005},
  issn = {1542-7730},
- pages = {28--35},
+ pages = {30:28--30:35},
+ articleno = {30},
  numpages = {8},
  url = {http://doi.acm.org/10.1145/1105664.1105676},
  doi = {10.1145/1105664.1105676},
  acmid = {1105676},
  publisher = {ACM},
  address = {New York, NY, USA}
-,abstract = {One of the greatest challenges facing people who use large information spaces  is to remember and retrieve items that they have previously found and thought  to be interesting. One approach to this problem is to allow individuals to  save particular search strings to re-create the search in the future. Another  approach has been to allow people to create personal collections of material—for  example, the use of electronic citation bundles (called binders) in the ACM  Digital Library. Collections of citations can be created manually by readers  or through execution of (and alerting to) a saved search.}
+,abstract = {Can your organization benefit from social bookmarking tools?}
 }
