--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/PharmacognosyResearchScraperUnitURLTest1.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/PharmacognosyResearchScraperUnitURLTest1.bib
@@ -1,12 +1,12 @@
-@article{nokey,
-author = {Shuge, Tian. and Xiaoying, Zhou. and Fan, Zhang. and Dongqing, An. and Tao, Yang.},
-title =  {{Essential Oil Composition of the <i>Dracocephalum moldavica </i>L from Xinjiang in China}},
-journal  ={Pharmacognosy Research},
-volume ={1},
-number ={4},
-pages  = {172-174},
-year  = {2009},
-abstract ={The essential oil of Dracocephalum moldavica L from Xinjiang in China was isolated by hydrodistillation in yield of 0.15 %(w/w). The chemical composition of the essential oil was analyzed by GC and GCMS. Fifty-one compounds accounting for 99.45% of the total oil were identified. The major components werea-Citral (32.55%), β-Citral (23.53%), Acetic acid, geranial ester(21.32%), Trans-Geraniol(3.38%), Nerolacetate(3.38%), Octane(2.14%), and 2,4,6-Trimethyl -3-cyclohexene-1-carboxaldehyde (1.3%). Monotenepers were the main group of compounds.},
-URL ={http://www.phcogres.com/article.asp?issn=0974-8490;year=2009;volume=1;issue=4;spage=172;epage=174;aulast=Shuge;t=6;t=6},
-eprint ={http://www.phcogres.com/article.asp?issn=0974-8490;year=2009;volume=1;issue=4;spage=172;epage=174;aulast=Shuge;t=6;t=6}
+@article{shuge2009essential,
+abstract = {The essential oil of Dracocephalum moldavica L from Xinjiang in China was isolated by hydrodistillation in yield of 0.15 %(w/w). The chemical composition of the essential oil was analyzed by GC and GCMS. Fifty-one compounds accounting for 99.45% of the total oil were identified. The major components werea-Citral (32.55%), &#946;-Citral (23.53%), Acetic acid, geranial ester(21.32%), Trans-Geraniol(3.38%), Nerolacetate(3.38%), Octane(2.14%), and 2,4,6-Trimethyl -3-cyclohexene-1-carboxaldehyde (1.3%). Monotenepers were the main group of compounds.},
+author = {Shuge, Tian and Xiaoying, Zhou and Fan, Zhang and Dongqing, An and Tao, Yang},
+journal = {Phcog Res},
+month = {jul},
+number = {4},
+pages = {172--174},
+title = {Essential Oil Composition of the <i>Dracocephalum moldavica </i>L from Xinjiang in China},
+url = {http://www.phcogres.com/article.asp?issn=0974-8490;year=2009;volume=1;issue=4;spage=172;epage=174;aulast=Shuge;t=6},
+volume = {1},
+year = {2009}
 }
